set(MARKET_TEST_SOURCES
    # Placeholder for future implementation
)

# Create test executable when sources are available
# add_executable(market_test ${MARKET_TEST_SOURCES})
# target_link_libraries(market_test PRIVATE market orderbook core gtest gtest_main)
# add_test(NAME market_test COMMAND market_test) 