set(NETWORK_TEST_SOURCES
    # Placeholder for future implementation
)

# Create test executable when sources are available
# add_executable(network_test ${NETWORK_TEST_SOURCES})
# target_link_libraries(network_test PRIVATE network core gtest gtest_main)
# add_test(NAME network_test COMMAND network_test) 