set(STRATEGY_TEST_SOURCES
    # Placeholder for future implementation
)

# Create test executable when sources are available
# add_executable(strategy_test ${STRATEGY_TEST_SOURCES})
# target_link_libraries(strategy_test PRIVATE strategy market orderbook core gtest gtest_main)
# add_test(NAME strategy_test COMMAND strategy_test) 